[package]
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
edition = "2018"
name = "icemaker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.1"
diff = "0.1"
home = "0.5.3"
itertools = "0.10"
lazy_static = "1.4"
markov = "1.1"
pico-args = "0.4"
rand = "0.8"
rayon = "1.5.0"
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempdir = "0.3"
walkdir = "2.3.1"

[profile.release]
#inherits="release"
codegen-units = 1
debug = false
incremental = false
lto = true

[features]
# run without systemd-run 
ci = []

#faster compile with not as good performance (more cgus) for manual testing
[profile.fast]
codegen-units = 4
debug = false
incremental = false
inherits = "release"
lto = "thin"
