[package]
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
edition = "2021"
license = "MIT/Apache-2.0"
name = "icemaker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.4", features = ["derive"]}
colored = "2.0.0"
ctrlc = "3.2.1"
diff = "0.1"
home = "0.5.3"
itertools = "0.10"
lazy_static = "1.4"
markov = "1.1"
once_cell = "1.13"
rand = "0.8"
rayon = "1.5.0"
regex = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
tempdir = "0.3"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-splicer = "0.1.0"
walkdir = "2.3.1"

[profile.release]
#inherits="release"
codegen-units = 1
debug = false
incremental = false
lto = "thin"

[features]
# run without prlimit
ci = []

#faster compile with not as good performance (more cgus) for manual testing
[profile.fast]
codegen-units = 4
debug = false
incremental = false
inherits = "release"
lto = "thin"
